# estruturar_projetodozero

./: pyproject.toml
app/: main.py
